WhiteNet/force-app/main/default/objects/City__c/fields/City_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Code__c</fullName>
    <externalId>true</externalId>
    <label>City Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>